# geoforge

./: .gitignore  CLAUDE.md  Cargo.toml  FIX_SUMMARY.md  GETTING_STARTED.md  README.md  SPHERICAL_IMPROVEMENTS.md  STAGE_1_COMPLETE.md  VISUALIZATIONS.md
docs/: temp_subduction_zone_colors.md
examples/: boundary_refinement.rs  export_all.rs  generate_all.rs  island_removal.rs  planetary_params.rs  png_import.rs  simple.rs
src/: error.rs  lib.rs  lib_improved.rs  lib_spherical_broken.rs  main.rs  map.rs  worldmap.rs
src/geology/: comprehensive.rs  domains.rs  generator.rs  mod.rs  orogenic.rs  provinces.rs
src/io/: export.rs
src/map/: mod.rs  tectonics_module.rs  terrain.rs  world.rs
src/map/spherical/: geometry.rs  mod.rs  planetary_params_tests.rs
src/spherical/: geometry.rs  mod.rs
src/tectonics/: algorithms.rs  boundary_analysis.rs  boundary_refinement.rs  electrostatic.rs  generator.rs  island_removal.rs  mod.rs  motion.rs  plates.rs
src/utils/: color.rs  mod.rs
tests/: stage1_tectonics_integration.rs  stage2_geology_integration.rs
