[package]
name = "geoforge"
version = "0.1.0"
edition = "2021"
description = "Realistic geological and climate modeling for procedural world generation"
authors = ["Your Name <email@example.com>"]
license = "MIT OR Apache-2.0"
keywords = ["worldgen", "geology", "climate", "procedural", "gis"]
categories = ["game-development", "science", "simulation"]

[dependencies]
rand = "0.8"
tiff = { version = "0.9", optional = true }
image = { version = "0.24", optional = true }

[features]
default = ["tectonic"]
tectonic = []
export-tiff = ["tiff"]
export-png = ["image"]
export-full = ["export-tiff", "export-png"]

[[bin]]
name = "geoforge"
path = "src/main.rs"
