[package]
name = "geoforge"
version = "0.1.0"
edition = "2021"
description = "Realistic geological and climate modeling for procedural world generation"
authors = ["Your Name <email@example.com>"]
license = "MIT OR Apache-2.0"
keywords = ["worldgen", "geology", "climate", "procedural", "gis"]
categories = ["game-development", "science", "simulation"]

[dependencies]
rand = "0.8"
image = { version = "0.24", optional = true }
gdal = { version = "0.15", optional = true }

[features]
default = []
export-png = ["dep:image"]
export-tiff = ["dep:gdal"]
export-full = ["export-png", "export-tiff"]
random-seed = []

[[bin]]
name = "geoforge"
path = "src/main.rs"
